--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body class="bg-dark m-5">
   <div class="container rounded-lg bg-light p-5">
     <h3 class="py-1">Formulaire</h3>
-    <form class="main border rounded-lg needs-validation" action="" novalidate>
+    <form class="main border rounded-lg needs-validation" action="user.html" novalidate>
 
       <!-- noms -->
       <div class="row p-3">
