change password type

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <div class="col-lg">
           <div class="form-group">
             <label class="h6 form-label" for="passwordEntry">Mot de passe</label>
-            <input data-password-entry type="text" class="form-control" id="passwordEntry"
+            <input data-password-entry type="password" class="form-control" id="passwordEntry"
               pattern="^(?=.*[A-Z])(?=.*\d)[a-zA-Z\d]{8,}$" placeholder="********" aria-describedby="passwordHelp"
               required>
             <small id="passwordHelp" class="form-text text-muted">Doit contenir une majuscule, un chiffre et un minimum
@@ -117,7 +117,7 @@
         <div class="col-lg">
           <div class="form-group">
             <label class="h6 form-label" for="passwordEntry" class="">Validation du mot de passe</label>
-            <input data-password-validate type="text" class="form-control" id="passwordEntry" placeholder="********"
+            <input data-password-validate type="password" class="form-control" id="passwordEntry" placeholder="********"
               required>
           </div>
         </div>
