--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@
               required>
             <small id="passwordHelp" class="form-text text-muted">Doit contenir une majuscule, un chiffre et un minimum
               de 8 caractères.</small>
+              <div class="valid-feedback">
+                Ce mot de passe est valide.
+              </div>
           </div>
         </div>
         <div class="col-lg">
@@ -119,6 +122,9 @@
             <label class="h6 form-label" for="passwordEntry" class="">Validation du mot de passe</label>
             <input data-password-validate type="password" class="form-control" id="passwordEntry" placeholder="********"
               required>
+              <div class="valid-feedback">
+                Les mots de passe sont identiques.
+              </div>
           </div>
         </div>
       </div>
